hphp/hack/test/typecheck/classname/new_needs_consistent_construct.php.exp
ERROR: File "new_needs_consistent_construct.php", line 8, characters 14-19:
Can't use `new` on `classname<C>`; `__construct` arguments are not guaranteed to be consistent in child classes (Typing[4060])
  File "new_needs_consistent_construct.php", line 7, characters 28-28:
  This declaration is neither `final` nor uses the `<<__ConsistentConstruct>>` attribute
ERROR: File "new_needs_consistent_construct.php", line 8, characters 14-19:
It is no longer allowed to use a `classname<C>` in this position. Please use a `class<C>` instead. (Typing[4482])
  File "new_needs_consistent_construct.php", line 7, characters 18-29:
  Definition is here
